--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -29,7 +29,7 @@ credentials:
       - usernamePassword:
           id: "artifactory"
           username: "admin"
-          password: "password"
+          password: "Mokrawoda7"
           scope: GLOBAL
       - basicSSHUserPrivateKey:
           id: "jenkins_agent"
